--- a/index.html
+++ b/index.html
@@ -132,12 +132,17 @@
         </div>
       </div>
 
-      <div class="container-fluid d-flex connectSection">
-        <div class="row justify-content-start ">
+      <div class="container-fluid connectSection">
+        <div class="row correctText">
+          <div class="col-12">
           <p class="">Connect</p>
           </div>
-          <div class="row ">
-            <h2>Don't be analog, Let's <span class="orange">connect</span></h2>
+          <div class="col-12">
+            <h2>Don't be analog, Let's 
+              <a href="#">
+              <span class="orange">connect</span>
+              </a>
+            </h2>
           </div>
       </div>
       
