bottom section added

--- a/index.html
+++ b/index.html
@@ -139,14 +139,31 @@
           </div>
           <div class="col-12">
             <h2>Don't be analog, Let's 
-              <a href="#">
+              <a id=unlineColor href="#">
               <span class="orange">connect</span>
               </a>
             </h2>
           </div>
       </div>
+      </div>
       
-
+    <div class="container-fluid bottomSection">
+      <div class="row">
+        <div class="col-4">
+        <img src="images/Tiny-Horse-logo-White-footer.png" alt="">
+        </div>
+        <div class="col-4 text"->
+          <p class="text-uppercase">6121 SUNSET BLVD</p>
+          <p class="text-uppercase" >Los Angeles, Ca 90028</p>
+          <p class="text-uppercase">Info@Tinyhorse.com</p>
+        </div>
+        <div class="col-4">
+          <p class="text-uppercase">Los Angeles</p>
+          <p class="text-uppercase">Charlotte</p>
+          <p class="text-uppercase">New York</p>
+        </div>
+      </div>
+    </div>
 
 
 
