spacing out bottomSection

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </div>
       
     <div class="container-fluid bottomSection">
-      <div class="row">
+      <div class="row correctText">
         <div class="col-4">
         <img src="images/Tiny-Horse-logo-White-footer.png" alt="">
         </div>
