links at bottom of page

--- a/index.html
+++ b/index.html
@@ -163,6 +163,15 @@
           <p class="text-uppercase">New York</p>
         </div>
       </div>
+      <div class="row bottomLinks">
+        <p>
+           @ Copyright 2019 | 
+          Tiny Horse |
+          <a id="unlineColor" href="#"> Privacy Policy </a>
+          | <a id="unlineColor" href=
+          "#">Legal</a>
+        </p>
+      </div>
     </div>
 
 
